2009-07-27  Jose Dapena Paz  <jdapena@igalia.com>

	Avoid a crash iterating in imap summary if it's corrupted.
    
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	(imap_update_summary): if summary is bigger than the sequence number
	coming from server, summary is corrupt. We were iterating wrongly to
	remove the extra elements, and could cause a crash.

	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
	reimplemented to load the summary when we get a folder changed
	event from camel, and use the standard folder_changed handler.
	Avoids crashes if the camel folder is freed earlier than
	folder changed handling finishes.

2009-07-27  Lucas Maneos <tinymail@subs.maneos.org>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	avoid sending an empty ENABLE command when the IMAP server's
	CAPABILITY response does not list any supported extensions.

2009-07-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c (get_parent_full_name):
	there was a reference leak in this method, as the recursion for
	getting the list of all parents was not properly freeing the
	objects.

2009-07-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
	always update the folder counts not only if we receive changed
	uids but when we get added uids and removed uids
	(folder_tracking_finalize)
	(_tny_camel_folder_track_folder_changed)
	(tny_camel_folder_finalize): user_data is now priv instead of self
	(folder_tracking_changed): do not do anything if the folder is
	already loaded as the folder_changed signal will handle the changes

2009-07-14  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_get_msg_async_thread): do not check for
	CAMEL_IS_OBJECT as a CamelOperation is not a CamelObject

2009-07-13  Jose Dapena Paz  <jdapena@igalia.com>
