@@ -1,7 +1,14 @@
+2009-07-27  Javier Jardon  <javierjc11982@gmail.com>
+
+	* tests/c-demo/tny-demoui-summary-view.c (recursive_all_folders):
+	* libtinymailui-mozembed/tny-moz-embed-msg-view.c
+	(tny_moz_embed_msg_view_create_mime_part_view_for_default):
+	removed some Gtk+ deprecated symbols
+
 2009-07-27  Jose Dapena Paz  <jdapena@igalia.com>
 
 	Avoid a crash iterating in imap summary if it's corrupted.
-    
+
 	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
 	(imap_update_summary): if summary is bigger than the sequence number
 	coming from server, summary is corrupt. We were iterating wrongly to
